--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,20 +7,25 @@ environment:
   sdk: ^3.6.0
 
 dependencies:
-  animate_do: ^3.3.4
+  animate_do: ^4.2.0
   card_swiper: ^3.0.1
-  dio: ^5.7.0
+  dio: ^5.8.0+1
   flutter:
     sdk: flutter
   flutter_dotenv: ^5.2.1
   flutter_riverpod: ^2.6.1
-  go_router: ^14.7.1
+  go_router: ^14.8.1
   intl: ^0.20.2
+  isar: ^3.1.0+1
+  isar_flutter_libs: ^3.1.0+1
+  path_provider: ^2.1.5
 
 dev_dependencies:
+  build_runner: ^2.4.15
   flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
+  isar_generator: ^3.1.0+1
 
 flutter:
   uses-material-design: true
